plugins {
    id 'com.android.application'
}

android {
    namespace "com.tv.live"

    // ====================================================================
    // ✅ compileSdk 保持 36
    // ====================================================================
    compileSdk 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        coreLibraryDesugaringEnabled true
    }

    buildFeatures {
        buildConfig true
    }

    defaultConfig {
        applicationId "com.tv.live"

        minSdk 21
        targetSdk 36

        versionCode 22
        versionName "2.2.3"

        multiDexEnabled true

        buildConfigField "int", "VERSION_CODE", "${versionCode}"
        buildConfigField "String", "VERSION_NAME", "\"${versionName}\""

        ndk {
            abiFilters 'arm64-v8a', 'armeabi-v7a'
        }
    }

    // ====================================================================
    // ✅ 【纯云端签名】本地彻底不找 release.keystore
    // ====================================================================
    signingConfigs {
        release {
            // 判断是否为 CI 环境（GitHub Actions）
            if (System.getenv('CI') == 'true') {
                // 云端：读取 GitHub Secrets 注入的环境变量
                storeFile file('release.keystore') 
                storePassword System.getenv('STORE_PASSWORD')
                keyAlias System.getenv('KEY_ALIAS')
                keyPassword System.getenv('KEY_PASSWORD')
                v1SigningEnabled true
                v2SigningEnabled true
            } else {
                // 本地电脑：全部置空，绝不读取任何 local.properties 或默认文件
                storeFile = null
                storePassword = null
                keyAlias = null
                keyPassword = null
            }
        }
        debug {
            storeFile file("../debug.keystore")
            storePassword "android"
            keyAlias "androiddebugkey"
            keyPassword "android"
            v1SigningEnabled true
            v2SigningEnabled true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            crunchPngs false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            // 只有找到 release 签名配置时才启用（即仅在云端 CI 生效）
            if (signingConfigs.release.storeFile != null) {
                signingConfig signingConfigs.release
            }
        }
        debug {
            signingConfig signingConfigs.debug
        }
    }

    packagingOptions {
        resources {
            pickFirsts += ['META-INF/com.android.tools/proguard/coroutines.pro']
        }
    }

    repositories {
        flatDir {
            dirs 'libs'
        }
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'

    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "com.google.android.material:material:1.11.0"
    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation 'com.google.zxing:core:3.5.1'
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation "androidx.media3:media3-exoplayer:1.7.1"
    implementation "androidx.media3:media3-ui:1.7.1"
    implementation "androidx.media3:media3-exoplayer-hls:1.7.1"
    implementation "androidx.media3:media3-exoplayer-dash:1.7.1"
    implementation "androidx.media3:media3-common:1.7.1"
    implementation "androidx.media3:media3-datasource:1.7.1"

    implementation "com.squareup.okhttp3:okhttp:4.12.0"
    implementation "com.squareup.retrofit2:retrofit:2.11.0"
    implementation "com.squareup.retrofit2:converter-gson:2.11.0"

    implementation "com.github.bumptech.glide:glide:4.16.0"
    annotationProcessor "com.github.bumptech.glide:compiler:4.16.0"

    implementation "org.apache.commons:commons-lang3:3.14.0"
    implementation "com.blankj:utilcodex:1.31.1"
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
}
